# AsyncLogger

./: CMakeLists.txt  README.md
benchmark/: benchmark.cpp
examples/: main.cpp
include/: BlockingQueue.hpp  BlockingQueue.tpp  LogFormatter.hpp  LogMessage.hpp  Logger.hpp
src/: LogFormatter.cpp  Logger.cpp
